--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,5 +1,23 @@
-@import url("https://fonts.googleapis.com/css2?family=Poppins:wght@400;700&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Poppins:wght@400;700&family=Source+Code+Pro:wght@400;700&display=swap");
 
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+@layer components {
+    .markdown {
+        @apply text-gray-800 font-mono whitespace-pre-wrap;
+    }
+
+    .markdown h1 {
+        @apply text-lg font-bold -mb-4 text-rose-600;
+    }
+
+    .markdown h2 {
+        @apply font-bold -mb-4;
+    }
+
+    .markdown pre {
+        @apply -mb-7;
+    }
+}
